typescript/checker/tests/conformance/expressions/asOperator/asOperator4.ts.stderr
error: ResolvedFailed {
    span: Span {
        lo: BytePos(
            94,
        ),
        hi: BytePos(
            122,
        ),
        ctxt: #0,
    },
    base: "$DIR/tests/conformance/expressions/asOperator",
    src: Atom('./foo' type=inline),
}
 --> $DIR/tests/conformance/expressions/asOperator/asOperator4.ts:7:1
  |
7 | import { foo } from './foo';
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

